@@ -238,6 +238,10 @@ FBYNAME (labelIsReturnOnly)
   int len;
   char * retInst;
 
+  /* Don't optimize jumps in a jump table; a more generic test */
+  if (currPl->ic && currPl->ic->op == JUMPTABLE)
+    return FALSE;
+
   label = hTabItemWithKey (vars, 5);
   if (!label) return FALSE;
   len = strlen(label);
